--- a/join-frontend/src/app/kanban/add-task/add-task.component.html
+++ b/join-frontend/src/app/kanban/add-task/add-task.component.html
@@ -8,9 +8,14 @@
             <div class="input-section-left">
 
                 <mat-label>Title<span class="star">*</span></mat-label>
-                <mat-form-field>
-                    <input matInput placeholder="Enter a title" name="title" [(ngModel)]="task.title" required>
+                <mat-form-field appearance="fill">
+                    <input matInput placeholder="Enter a title" name="title" [(ngModel)]="task.title" required
+                        #titleInput="ngModel">
+                    <mat-error *ngIf="titleInput.invalid && titleInput.touched">
+                        Title is required
+                    </mat-error>
                 </mat-form-field>
+
 
                 <mat-label>Description</mat-label>
                 <mat-form-field>
@@ -36,10 +41,14 @@
                 <mat-label>Due date<span class="star">*</span></mat-label>
                 <mat-form-field class="example-full-width">
                     <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" placeholder="dd/mm/yyyy"
-                        name="dueDate" [(ngModel)]="task.dueDate" required>
+                        name="dueDate" [(ngModel)]="task.dueDate" required #dueDateInput="ngModel">
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="dueDateInput.invalid && dueDateInput.touched">
+                        Due date is required
+                    </mat-error>
                 </mat-form-field>
+
 
                 <mat-label>Priority</mat-label>
                 <mat-button-toggle-group [(ngModel)]="task.priority" aria-label="Font Style" name="priority"
@@ -51,33 +60,35 @@
 
                 <mat-label>Category<span class="star">*</span></mat-label>
                 <mat-form-field>
-                    <mat-select [(ngModel)]="task.category" name="category" required placeholder="Select task category">
+                    <mat-select [(ngModel)]="task.category" name="category" required placeholder="Select task category"
+                        #categoryInput="ngModel">
                         <mat-option value="Technical">Technical Task</mat-option>
                         <mat-option value="User_Story">User Story</mat-option>
                     </mat-select>
+                    <mat-error *ngIf="categoryInput.invalid && categoryInput.touched">
+                        Category is required
+                    </mat-error>
                 </mat-form-field>
+
 
                 <mat-label>Subtasks</mat-label>
                 <mat-form-field>
                     <input [ngModelOptions]="{standalone: true}" #input matInput placeholder="Add new subtask"
                         [(ngModel)]="newSubtask" (focus)="onInputFocus()" (blur)="onInputBlur()">
-                    <!-- Button, um neuen Subtask hinzuzufügen -->
                     <button type="button" matSuffix mat-icon-button *ngIf="!isInputFocused && editingIndex === null"
                         (mousedown)="addSubtask()">
                         <mat-icon>add</mat-icon>
                     </button>
-                    <!-- Button, um Eingabefeld zu leeren -->
                     <button type="button" matSuffix mat-icon-button *ngIf="isInputFocused && editingIndex === null"
                         (mousedown)="clearInputField()">
                         <mat-icon>clear</mat-icon>
                     </button>
-                    <!-- Button, um neuen Subtask hinzuzufügen -->
                     <button type="button" matSuffix mat-icon-button *ngIf="isInputFocused && editingIndex === null"
                         (mousedown)="addSubtask()">
                         <mat-icon>done</mat-icon>
                     </button>
-                    <!-- Button, um bearbeiteten Subtask zu speichern -->
-                    <button type="button" matSuffix mat-icon-button *ngIf="editingIndex !== null" (click)="updateSubtask()">
+                    <button type="button" matSuffix mat-icon-button *ngIf="editingIndex !== null"
+                        (click)="updateSubtask()">
                         <mat-icon>done</mat-icon>
                     </button>
                 </mat-form-field>
@@ -92,7 +103,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="mobile-required-text" style="display: none;"><span class="star">*</span><span>This field is required</span></div>
+                <div class="mobile-required-text" style="display: none;"><span class="star">*</span><span>This field is
+                        required</span></div>
             </div>
         </div>
 
@@ -103,9 +115,13 @@
                     <button type="button" class="clear-btn" (click)="clearForm(taskForm)">
                         Clear <mat-icon>clear</mat-icon>
                     </button>
-                    <button type="submit" class="create-btn" mat-stroked-button [disabled]="!taskForm.valid">
-                        Create Task <img src="assets/icons/check-btn.svg" alt="">
-                    </button>
+                    <span matTooltip="Please fill out all required fields" [matTooltipDisabled]="taskForm.valid"
+                        matTooltipShowDelay="0" matTooltipPosition="above">
+                        <button type="submit" class="create-btn" mat-stroked-button [disabled]="!taskForm.valid">
+                            Create Task <img src="assets/icons/check-btn.svg" alt="">
+                        </button>
+                    </span>
+
                 </div>
             </div>
         </div>
