--- a/join-frontend/src/app/kanban/summary/summary.component.html
+++ b/join-frontend/src/app/kanban/summary/summary.component.html
@@ -70,8 +70,7 @@
             <span class="name">{{convertedName}}</span>
         </div>
     </div>
-    <div *ngIf="showNameContainer" class="mobile-name-container"
-    [class.visible]="showNameContainer">
+    <div *ngIf="showNameContainer" class="mobile-name-container" [class.visible]="showNameContainer">
         <span class="greeting">{{ greeting }},</span>
         <span class="name">{{convertedName}}</span>
     </div>
