--- a/join-frontend/src/app/legal-pages/legal-notice/legal-notice.component.html
+++ b/join-frontend/src/app/legal-pages/legal-notice/legal-notice.component.html
@@ -6,8 +6,8 @@
     <h2>Imprint</h2>
     <ul>
         <li>Rio Stenger</li>
-        <li>Musterstrasse 4</li>
-        <li>63742 Aschaffenburg</li>
+        <li>Bertastrasse 4</li>
+        <li>63743 Aschaffenburg</li>
     </ul>
 
     <h3><strong>Exploring the Board</strong></h3>
