--- a/join-frontend/src/app/dialogs/task-dialog/task-dialog.component.scss
+++ b/join-frontend/src/app/dialogs/task-dialog/task-dialog.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    max-height: 800px;
+    max-height: 90vh;
     cursor: pointer;
     min-width: 360px;
     max-width: 600px;
@@ -190,7 +190,6 @@
     overflow-y: auto;
     height: 80vh;
     max-height: 800px;
-
 }
 
 .headline {
@@ -319,7 +318,7 @@ mat-label {
     }
 }
 
-mat-label{
+mat-label {
     padding-top: 18px;
 }
 
@@ -328,33 +327,36 @@ mat-label{
 }
 
 @media (max-width: 600px) {
-    .user-title{
+    .user-title {
         font-size: 36px;
     }
-    
+
     .section-show-task {
         min-width: 318px;
     }
-    
-    .section-edit-task{
+
+    .section-edit-task {
         min-width: 318px;
         align-items: center;
     }
+
     .headline {
+        width: 100%;
+
         h1 {
             font-size: 36px;
         }
     }
-    
+
     .input-section-left {
         width: auto;
     }
-    
+
     .input-section-right {
         width: auto;
     }
 
-  form{
-    width: 100%;
-  }
+    form {
+        width: 100%;
     }
+}
