--- a/join-frontend/src/app/kanban/summary/summary.component.scss
+++ b/join-frontend/src/app/kanban/summary/summary.component.scss
@@ -186,7 +186,7 @@ section {
     }
 }
 
-.mobile-name-container{
+.mobile-name-container {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -202,18 +202,19 @@ section {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 9999;
     height: 100%;
-    width: 100%; opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards; /* Animation mit Keyframes */
-  }
-  
-  @keyframes fadeIn {
+    width: 100%;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
     0% {
-      opacity: 0; /* Am Anfang unsichtbar */
+        opacity: 0;
     }
+
     100% {
-      opacity: 1; /* Am Ende voll sichtbar */
+        opacity: 1;
     }
-  
 }
 
 .greeting {
@@ -226,7 +227,6 @@ section {
     font-weight: 700;
     color: #29ABE2;
 }
-
 
 @media (max-width: 1080px) {
 
@@ -246,7 +246,6 @@ section {
         justify-content: center;
     }
 }
-
 
 @media (max-width: 760px) {
     .metrics-container {
